# loong_sim

./: .gitignore  CMakeLists.txt  NOTICE  README.md  readme.md  代码规范new.md
config/: driver_mujoco.ini  plan_jnt_sdk.ini  plan_rc.ini  plan_rl.ini  swing_arm.ini
main/ctrl_sim_loco/: main.cpp
model/: AzureLoong.xml  scene.xml
module/nabo_locomotion/: nabo.h
src/: sim.cpp  sim.h
tools/: make.sh  run_mujoco_loco.sh  run_mujoco_mani.sh  run_share_sim.sh
